--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^3.0.1",
     "cac": "^6.7.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite": "^4.0.4"
   }
 }
