--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -w"
+    "start": "tsup --watch",
+    "build": "tsup",
+    "preview": "cd build && serve ."
   },
   "bin": {
     "island": "bin/island.js"
@@ -15,7 +17,9 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
+    "ora": "^6.1.2",
     "rollup": "^3.10.0",
+    "tsup": "^6.6.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
