--- a/package.json
+++ b/package.json
@@ -4,20 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
     "start": "tsup --watch",
     "build": "tsup",
-    "preview": "cd build && serve ."
+    "preview": "cd build && serve .",
+    "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./"
   },
   "bin": {
     "island": "bin/island.js"
+  },
+  "lint-staged": {
+    "**/*.{.js,.jsx,.ts,.tsx}": [
+      "npm run lint"
+    ]
   },
   "keywords": [],
   "author": "cullyfung",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "commitlint": "^17.4.4",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "ora": "^6.1.2",
+    "prettier": "^2.8.4",
     "rollup": "^3.10.0",
     "tsup": "^6.6.3",
     "typescript": "^4.9.4"
