--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky install",
-    "start": "tsup --watch",
+    "dev": "tsup --watch",
     "build": "tsup",
     "preview": "cd build && serve .",
-    "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./"
+    "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./",
+    "prepare": "husky install",
+    "test:unit": "vitest --ui",
+    "test:e2e": "playwright test",
+    "prepare:e2e": "tsx scripts/prepare-e2e.ts"
   },
   "bin": {
     "island": "bin/island.js"
@@ -24,10 +27,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@playwright/test": "^1.31.1",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "@vitest/ui": "^0.28.5",
     "commitlint": "^17.4.4",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
@@ -40,7 +45,8 @@
     "prettier": "^2.8.4",
     "rollup": "^3.10.0",
     "tsup": "^6.6.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.28.5"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.1",
