--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fs-extra": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "vite": "^4.0.4"
   }
 }
