--- a/package.json
+++ b/package.json
@@ -43,9 +43,14 @@
     "lint-staged": "^13.1.2",
     "ora": "^6.1.2",
     "prettier": "^2.8.4",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.2",
     "rollup": "^3.10.0",
     "tsup": "^6.6.3",
     "typescript": "^4.9.4",
+    "unified": "^10.1.2",
     "vitest": "^0.28.5"
   },
   "dependencies": {
