--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.3",
+    "@mdx-js/rollup": "^2.3.0",
     "@vitejs/plugin-react": "^3.0.1",
     "cac": "^6.7.14",
     "fast-glob": "^3.2.12",
@@ -62,6 +63,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx-frontmatter": "^2.1.1",
     "vite": "^4.0.4"
   }
 }
