--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@playwright/test": "^1.31.1",
     "@types/fs-extra": "^11.0.1",
+    "@types/hast": "^2.3.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -51,6 +52,7 @@
     "tsup": "^6.6.3",
     "typescript": "^4.9.4",
     "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2",
     "vitest": "^0.28.5"
   },
   "dependencies": {
