--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@playwright/test": "^1.31.1",
     "@types/fs-extra": "^11.0.1",
     "@types/hast": "^2.3.4",
+    "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -43,6 +44,7 @@
     "hast": "^1.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "mdast-util-mdxjs-esm": "^1.3.1",
     "ora": "^6.1.2",
     "prettier": "^2.8.4",
     "rehype-stringify": "^9.0.3",
@@ -60,9 +62,11 @@
     "@loadable/component": "^5.15.3",
     "@mdx-js/rollup": "^2.3.0",
     "@vitejs/plugin-react": "^3.0.1",
+    "acorn": "^8.8.2",
     "cac": "^6.7.14",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.0",
+    "github-slugger": "^2.0.0",
     "hast-util-from-html": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -71,6 +75,7 @@
     "rehype-slug": "^5.1.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-mdx": "^2.3.0",
     "remark-mdx-frontmatter": "^2.1.1",
     "shiki": "^0.14.1",
     "vite": "^4.0.4"
