feat: doc render

--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@iconify-json/carbon": "^1.1.18",
     "@playwright/test": "^1.31.1",
     "@types/fs-extra": "^11.0.1",
     "@types/hast": "^2.3.4",
+    "@types/lodash-es": "^4.17.7",
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "@vitest/ui": "^0.28.5",
@@ -52,6 +56,7 @@
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.2",
     "rollup": "^3.10.0",
+    "sass": "^1.63.6",
     "tsup": "^6.6.3",
     "typescript": "^4.9.4",
     "unified": "^10.1.2",
@@ -68,6 +73,7 @@
     "fs-extra": "^11.1.0",
     "github-slugger": "^2.0.0",
     "hast-util-from-html": "^1.0.1",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
@@ -78,6 +84,7 @@
     "remark-mdx": "^2.3.0",
     "remark-mdx-frontmatter": "^2.1.1",
     "shiki": "^0.14.1",
+    "sirv": "^2.0.3",
     "unocss": "^0.50.4",
     "vite": "^4.0.4"
   }
