--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup",
+    "build": "tsup && ni build:deps",
+    "build:deps": "tsx ./scripts/prebundle",
     "preview": "cd build && serve .",
     "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./",
     "prepare": "husky install",
@@ -61,6 +62,7 @@
     "rollup": "^3.10.0",
     "sass": "^1.63.6",
     "tsup": "^6.6.3",
+    "tsx": "^3.12.7",
     "typescript": "^4.9.4",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
@@ -76,6 +78,7 @@
     "@vitejs/plugin-react": "^3.0.1",
     "acorn": "^8.8.2",
     "cac": "^6.7.14",
+    "esbuild": "^0.18.13",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.0",
     "github-slugger": "^2.0.0",
@@ -90,6 +93,7 @@
     "remark-gfm": "^3.0.1",
     "remark-mdx": "^2.3.0",
     "remark-mdx-frontmatter": "^2.1.1",
+    "resolve": "^1.22.2",
     "shiki": "^0.14.1",
     "sirv": "^2.0.3",
     "unocss": "^0.50.4",
