--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "1.3.0",
     "react-router-dom": "^6.8.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0",
