--- a/package.json
+++ b/package.json
@@ -79,12 +79,14 @@
     "@vitejs/plugin-react": "^3.0.1",
     "acorn": "^8.8.2",
     "cac": "^6.7.14",
+    "compression": "^1.7.4",
     "esbuild": "^0.18.13",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.0",
     "github-slugger": "^2.0.0",
     "hast-util-from-html": "^1.0.1",
     "lodash-es": "^4.17.21",
+    "polka": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
