--- a/package.json
+++ b/package.json
@@ -1,73 +1,43 @@
 {
   "name": "island",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup && ni build:deps",
-    "build:deps": "tsx ./scripts/prebundle",
-    "preview": "cd build && serve .",
-    "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./",
-    "prepare": "husky install",
-    "test:unit": "vitest",
-    "test:e2e": "playwright test",
-    "prepare:e2e": "tsx scripts/prepare-e2e.ts"
-  },
+  "description": "Vite SSG framework based on island arch",
+  "keywords": [
+    "vite",
+    "ssg"
+  ],
+  "license": "MIT",
+  "author": "cullyfung",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "bin": {
     "island": "bin/island.js"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "README.md",
+    "src/runtime",
+    "src/theme-default",
+    "src/shared"
+  ],
+  "scripts": {
+    "build": "tsup && ni build:deps",
+    "build:deps": "tsx ./scripts/prebundle",
+    "dev": "tsup --watch",
+    "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./",
+    "prepare": "husky install",
+    "prepare:e2e": "tsx scripts/prepare-e2e.ts",
+    "preview": "cd build && serve .",
+    "release": "tsx ./scripts/release.ts",
+    "test:e2e": "playwright test",
+    "test:unit": "vitest"
   },
   "lint-staged": {
     "**/*.{.js,.jsx,.ts,.tsx}": [
       "npm run lint"
     ]
-  },
-  "keywords": [],
-  "author": "cullyfung",
-  "license": "MIT",
-  "devDependencies": {
-    "@antfu/ni": "^0.21.4",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@iconify-json/carbon": "^1.1.18",
-    "@playwright/test": "^1.31.1",
-    "@types/babel__core": "^7.20.1",
-    "@types/babel__helper-plugin-utils": "^7.10.0",
-    "@types/babel__traverse": "^7.20.1",
-    "@types/fs-extra": "^11.0.1",
-    "@types/hast": "^2.3.4",
-    "@types/lodash-es": "^4.17.7",
-    "@types/mdast": "^3.0.10",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "@vitest/ui": "^0.28.5",
-    "commitlint": "^17.4.4",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "hast": "^1.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.2",
-    "mdast-util-mdxjs-esm": "^1.3.1",
-    "ora": "^6.1.2",
-    "prettier": "^2.8.4",
-    "rehype-stringify": "^9.0.3",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
-    "remark-stringify": "^10.0.2",
-    "rollup": "^3.10.0",
-    "sass": "^1.63.6",
-    "tsup": "^6.6.3",
-    "tsx": "^3.12.7",
-    "typescript": "^4.9.4",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2",
-    "vitest": "^0.28.5"
   },
   "dependencies": {
     "@babel/core": "^7.22.8",
@@ -102,5 +72,56 @@
     "sirv": "^2.0.3",
     "unocss": "^0.50.4",
     "vite": "^4.0.4"
+  },
+  "devDependencies": {
+    "@antfu/ni": "^0.21.4",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@iconify-json/carbon": "^1.1.18",
+    "@playwright/test": "^1.31.1",
+    "@types/babel__core": "^7.20.1",
+    "@types/babel__helper-plugin-utils": "^7.10.0",
+    "@types/babel__traverse": "^7.20.1",
+    "@types/execa": "^2.0.0",
+    "@types/fs-extra": "^11.0.1",
+    "@types/hast": "^2.3.4",
+    "@types/lodash-es": "^4.17.7",
+    "@types/mdast": "^3.0.10",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "@vitest/ui": "^0.28.5",
+    "chalk": "^5.3.0",
+    "commitlint": "^17.4.4",
+    "conventional-changelog-cli": "^3.0.0",
+    "enquirer": "^2.3.6",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "execa": "^5.1.1",
+    "hast": "^1.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "mdast-util-mdxjs-esm": "^1.3.1",
+    "minimist": "^1.2.8",
+    "ora": "^6.1.2",
+    "prettier": "^2.8.4",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.2",
+    "rollup": "^3.10.0",
+    "sass": "^1.63.6",
+    "semver": "^7.5.4",
+    "tsup": "^6.6.3",
+    "tsx": "^3.12.7",
+    "typescript": "^4.9.4",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2",
+    "vitest": "^0.28.5"
   }
 }
