--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "tsup && pnpm build:deps",
     "build:deps": "tsx ./scripts/prebundle",
     "dev": "tsup --watch",
+    "dev:docs": "island dev docs",
     "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./",
     "prepare": "husky install",
     "prepare:e2e": "tsx scripts/prepare-e2e.ts",
@@ -36,7 +37,7 @@
   },
   "lint-staged": {
     "**/*.{.js,.jsx,.ts,.tsx}": [
-      "npm run lint"
+      "eslint --fix --quite"
     ]
   },
   "dependencies": {
@@ -105,7 +106,7 @@
     "hast": "^1.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
-    "mdast-util-mdxjs-esm": "^1.3.1",
+    "mdast-util-mdxjs-esm": "^1.3.0",
     "minimist": "^1.2.8",
     "ora": "^6.1.2",
     "prettier": "^2.8.4",
