chore: update deps

--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "dev": "tsup --watch",
     "dev:docs": "island dev docs",
     "lint": "eslint --fix --ext .ts,.tsx.js,.jsx ./",
+    "pnpm-install": "pnpm install",
     "prepare": "husky install",
     "prepare:e2e": "tsx scripts/prepare-e2e.ts",
-    "preview": "cd build && serve .",
+    "preview": "cd /docs/build && serve .",
     "release": "tsx ./scripts/release.ts",
     "test:e2e": "playwright test",
     "test:unit": "vitest"
@@ -114,6 +115,7 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.2",
+    "rimraf": "^5.0.1",
     "rollup": "^3.10.0",
     "sass": "^1.63.6",
     "semver": "^7.5.4",
